える処理を追加しました（app_16.js:12, app_16.js:423, app_16.js:485）。 updateRunnerMarkers でゴール判定時にマーカーをゴール座標へスナップし、アイコンとポップアップに「ゴール済」を表示するよう更新しました（app_16.js:545, app_16.js:584, app_16.js:613）。 新しいゴール用マーカーのスタイルを追加し、白地＋🏁アイコンで視認性を高めました（index_16.html:844）。

--- a/index_16.html
+++ b/index_16.html
@@ -844,6 +844,17 @@
         .runner-icon .rank-number {
             line-height: 1; /* Vertically center the number */
         }
+        .runner-icon .goal-marker {
+            background-color: #ffffff;
+            border-width: 2px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.45);
+        }
+        .runner-icon .goal-marker::after {
+            border-top-color: inherit;
+        }
+        .runner-icon .goal-marker .rank-number {
+            font-size: 16px;
+        }
         /* Leaflet popup customization */
         .leaflet-popup-content-wrapper {
             border-radius: 5px;
